quick fix to make titles legible on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2837,7 +2837,11 @@ time, sup, header h2 span, .global span, h1 span {
     box-shadow: -30px 30px 0 0 #374745; }
     @media (max-width: 30em) {
       .books .book {
-        width: 100%; } }
+        width: 100%;
+        margin-right: 0;
+        border: 0; }
+        .books .book h2 {
+          padding-right: 1em; } }
     .books .book:hover {
       -webkit-box-shadow: 30px 30px 0 0 #9abcbd;
       -moz-box-shadow: 30px 30px 0 0 #9abcbd;
